--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,7 +3,9 @@
   hosts: all
   roles:
     - role: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
-# tasks:
-#   - name: "Include fman"
-#      include_role:
-#        name: "fman"
+
+  pre_tasks:
+    - name: Update apt cache.
+      apt: update_cache=true cache_valid_time=600
+      when: ansible_os_family == 'Debian'
+      changed_when: false
