--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -4,10 +4,19 @@ dependency:
 driver:
   name: docker
 platforms:
+#  - name: instance
+#    image: docker.io/pycontribs/centos:8
+#    pre_build_image: true
   - name: instance
-    image: docker.io/pycontribs/centos:8
+    image: "geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu1804}-ansible:latest"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
     pre_build_image: true
+
 provisioner:
   name: ansible
 verifier:
-  name: ansible
+  name: testinfra
+  enabled: true
