try only ubuntu

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
     strategy:
       matrix:
         distro:
-          - centos7
+#          - centos7
           - ubuntu2004
 
     steps:
